CSS fixes + use SVG images instead of PNG

--- a/paragraph.html
+++ b/paragraph.html
@@ -90,8 +90,8 @@
   
   <div class="container-fluid">
     <div class="text-center"><div class="btn btn-default" style="margin-bottom: 2vh;" checked id="keyboard-toggle">Toggle keyboard</div></div>
-    <div id="left-hand" class="hidden-xs hidden-sm col-md-2 col-lg-3"></div>
-    <div id="keyboard" class="col-sm-12 col-md-8 col-lg-6">
+    <div id="left-hand" class="hidden-xs hidden-sm col-md-2"></div>
+    <div id="keyboard" class="col-sm-12 col-md-8">
       <ul id="number-row">
         <li id="key-`" class="key key-normal key-pinky key-left">`<sup> ~</sup></li>
         <li id="key-1" class="key key-normal key-pinky key-left">1<sup> !</sup></li>
@@ -157,7 +157,7 @@
         <li id="key-space" class="key">space</li>
       </ul>
     </div>
-    <div id="right-hand" class="hidden-sm col-md-2 col-lg-3"></div>
+    <div id="right-hand" class="hidden-xs hidden-sm col-md-2"></div>
   </div>
 
   <div class="modal fade" id="modal-success" data-backdrop="static" data-keyboard="false">
