--- a/index.html
+++ b/index.html
@@ -100,7 +100,33 @@
     </section>
   </main>
 
+  <div id="welcome-message" style="display:none;">
+    <h2>Welcome to Typing Tutor</h2>
+    <p>Tutorials for new visitors go here</p>
+    <a id="fvpp-close">✖</a>
+  </div>
+  <script src="js/firstVisitPopup.min.js"></script>
+  <script>
+    $(function () {
+      $('#welcome-message').firstVisitPopup({
+        cookieName : 'homepage',
+        showAgainSelector: '#show-message'
+      });
+    });
+  </script>
 
-</div>
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-36251023-1']);
+    _gaq.push(['_setDomainName', 'jqueryscript.net']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+  <div id="fvpp-blackout" style="display:none;"></div>
   
 </body>
